# stardust_db

./: .gitignore  Cargo.toml  cbindgen.toml  stardust_db.h
examples/: cli.rs
src/: ast.rs  c_interface.rs  cli.rs  data_types.rs  error.rs  foreign_key.rs  interpreter.rs  join_handler.rs  lib.rs  query_process.rs  relation.rs  resolved_expression.rs  stardust_demo.rs  stardust_test.rs  storage.rs  table_definition.rs  table_handler.rs  temporary_database.rs  tests.rs  utils.rs
src/query_process/: create_table.rs  delete.rs  drop.rs  expression.rs  insert.rs  mod.rs  select.rs  update.rs
