[package]
name = "stardust_db"
version = "0.1.0"
authors = ["joshwd36 <joshwd36@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.8.0"
sled = { version = "0.34.6", path = "../sled" }
thiserror = "1"
serde = { version = "1.0", features = ["derive"]}
bincode = "1"
itertools = "0.10.0"
indexmap = { version = "1.6.2", features = ["serde-1"]}

[lib]
name = "stardust_db"
path = "src/lib.rs"

[[example]]
name = "cli"

[[bin]]
name = "stardust_test"
path = "src/stardust_test.rs"