[package]
name = "stardust_db"
version = "0.1.0"
authors = ["joshwd36 <joshwd36@gmail.com>"]
edition = "2018"
#default-run = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = { git = "https://github.com/joshwd36/sqlparser-rs", branch = "referential_constriant_action" }
sled = { version = "0.34.6" }
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
itertools = "0.10.0"
indexmap = { version = "1.6.2", features = ["serde-1"] }
auto_enums = "0.7.12"
rand = { version = "0.8.3", default-features = false, features = ["std_rng"] }
once_cell = "1.7.2"
co_sort = "0.2.0"

[lib]
name = "stardust_db"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "stardust_demo"
path = "src/stardust_demo.rs"
